@@ -1,6 +1,7 @@
 package spells.spells;
 
-import org.bukkit.Bukkit;
+import esze.main.main;
+import esze.utils.NBTUtils;
 import org.bukkit.ChatColor;
 import org.bukkit.Material;
 import org.bukkit.block.Block;
@@ -9,9 +10,6 @@ import org.bukkit.entity.Player;
 import org.bukkit.inventory.ItemStack;
 import org.bukkit.inventory.meta.ItemMeta;
 import org.bukkit.scheduler.BukkitRunnable;
-
-import esze.main.main;
-import esze.utils.NBTUtils;
 import spells.spellcore.Spell;
 import spells.spellcore.SpellDescription;
 import spells.spellcore.SpellList;
@@ -37,9 +35,7 @@ public class Vorbereiten extends Spell {
 
     @Override
     public void setUp() {
-        // TODO Auto-generated method stub
-
-        String s = SpellList.getDiffrentRandomGreen(1).get(0).getName();
+        String s = SpellList.getDiffrentRandomGreen(1).getFirst().getName();
 
         s = "§2" + ChatColor.stripColor(s);
         final String s2 = s;
@@ -60,55 +56,46 @@ public class Vorbereiten extends Spell {
 
     @Override
     public void cast() {
-        // TODO Auto-generated method stub
 
     }
 
     @Override
     public void launch() {
-        // TODO Auto-generated method stub
 
     }
 
     @Override
     public void move() {
-        // TODO Auto-generated method stub
 
     }
 
     @Override
     public void display() {
-        // TODO Auto-generated method stub
 
     }
 
     @Override
     public void onPlayerHit(Player p) {
-        // TODO Auto-generated method stub
 
     }
 
     @Override
     public void onEntityHit(LivingEntity ent) {
-        // TODO Auto-generated method stub
 
     }
 
     @Override
     public void onSpellHit(Spell spell) {
-        // TODO Auto-generated method stub
 
     }
 
     @Override
     public void onBlockHit(Block block) {
-        // TODO Auto-generated method stub
 
     }
 
     @Override
     public void onDeath() {
-        // TODO Auto-generated method stub
 
     }
 
